Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agendamentos - A partir de Hoje</title>
+    <title>Agendamentos Mr Jack</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -2034,3 +2034,4 @@ Cole em um arquivo de texto para usar a lista de transmissão no WhatsApp.`);
     </script>
 </body>
 </html>
+
